<resources>
    <string name="app_name">TODO app</string>
    <string name="email">Enter Email ID</string>
    <string name="password">Enter Password</string>
    <string name="Registered_email">Enter Registered Email ID</string>
    <string name="otp">OTP</string>
    <string name="otp_txt">An OTP will be sent to you on this email id.</string>
    <string name="edit_email_txt">You cannot change or edit this email id once registered.</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="new_to_todo">New to todo?</string>
    <string name="signup">Sign up</string>
    <string name="txt2">work and life, finally.</string>
    <string name="txt1">Organise your</string>
    <string name="Next">Next</string>
    <string name="todo">todo</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="sign_up_otp">Sign up OTP</string>
    <string name="you_will_receive_otp">You will receive OTP on your registered email id.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="your_otp_will_expire_in">Your OTP will expire in</string>
    <string name="_5_00">05:00</string>
    <string name="authorise">Authorise</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save_task">Save Task</string>
    <string name="delete_task">Delete Task</string>

    <string name="timer_placeholder">00:00</string>
    <string name="timer_duration">300000</string>
    //5*60*1000 = 300000

    <string-array name="spinner_items">
        <item>Todo</item>
        <item>In Progress</item>
        <item>Done</item>
    </string-array>
    <string-array name="spinner_item">
        <item>Todo</item>
    </string-array>

    <string name="invalid_or_empty_email_id">Invalid or empty email id.</string>

    <string name="invalid_or_empty_mobile_number">Invalid or empty mobile number.</string>
    <string name="invalid_or_empty_password">Invalid or empty password.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="Todo">Todo</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_verification">Email verification</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="resend_code">Resend Code</string>
    <string name="no_worries_we_will_send_you_reset_instructions">Please enter your email address. You will receive an OTP over email to reset your password</string>
    <string name="reset_password">Reset Password</string>

    <string name="go_back">are you sure you want to go back without saving?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="required_fields_are_empty">required fields are empty.</string>
    <string name="no_match">Password do not match.</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="mobile_number_required">Mobile number required</string>
    <string name="d_10">^\\d{10}$</string>
    <string name="mobile_number_is_required">Mobile number is required.</string>
    <string name="username_is_required">Username is required.</string>
    <string name="new_password">New Password</string>
    <string name="_8_characters_minimum_case_sensitive"><![CDATA[8 characters minimum & case sensitive.]]></string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="email_is_required">Email is Required</string>
    <string name="password_is_required">Password is required.</string>
    <string name="confirm_password_is_required">Confirm password is required.</string>
    <string name="todo1">todo</string>
    <string name="password_pattern"><![CDATA[^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^&*()_+\\-=\\[\\]{};\':\",./<>?|\\\\]).{8,}$]]></string>
    <string name="password_pattern_requirement">"At least one uppercase and lowercase letter, at least one digit and at least one special character.\nAt least 8 characters in total. "</string>
    <string name="sdfvbsrdv">"sdfvbsrdv "</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="personal_information">Personal Information</string>
    <string name="aready_user_exist">User already exist with this email id, kindly login to continue using the application.</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want to delete account</string>
    <string name="delete_todo">Are you sure,\nyou want to delete todo</string>
    <string name="delete_user">Are you sure,\nyou want to delete your account?</string>
    <string name="logout_confirmation">Are you sure,\nyou want to logout?</string>
    <string name="old_password">Old password</string>
    <string name="new_password1">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="title1">Title</string>
    <string name="description1">Description</string>
    <string name="status1">Status</string>
    <string name="date1">Date</string>
    <string name="time1">Time</string>
    <string name="delete">Delete</string>
    <string name="save1">Save</string>
    <string name="email1">Email *</string>
    <string name="submit">Submit</string>
    <string name="enter_otp1">Enter OTP *</string>
    <string name="otp_valid_for">OTP valid for</string>
    <string name="minutes">minutes</string>
    <string name="verify">Verify</string>
    <string name="enter_the_otp_that_you_have_received_to_reset_your_password">Enter the OTP that you have received to reset your password</string>
    <string name="add_todo">add todo</string>
    <string name="confirm_new_password1">Confirm new password</string>
    <string name="new_password2">New password</string>
    <string name="name">Name :</string>
    <string name="email11">Email :</string>
    <string name="mobile">Mobile :</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="title4">Title :</string>
    <string name="to_do_title">To-Do Title</string>
    <string name="_01_sep_2023">01-Sep-2023</string>
    <string name="time2">Time :</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="to_do_description">To-Do Description</string>
    <string name="date5">Date :</string>
    <string name="status3">Status</string>
    <string name="description5">Description :</string>
    <string name="your_session_has_expired">Your session has expired.\nPlease login.</string>
    <string name="edit">Edit</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="mobile_number_must_be_10_digit">mobile number must be 10 digit.</string>
    <string name="password_don_t_match">Password don\'t match</string>
</resources>