<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/fragment_edit_task.xml -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.EditTask">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no" />
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="calendar"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
          <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/datePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/buttonDeleteTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_task"
            app:layout_constraintTop_toBottomOf="@id/timePicker"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/buttonSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Task"
            app:layout_constraintTop_toBottomOf="@id/timePicker"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
